# brandfetch-mcp

./: .env.example  .gitignore  .shellcheckrc  .snyk  AGENTS.md  API_KEY_SETUP.md  CHANGELOG.md  Dockerfile  EXAMPLES.md  Makefile  README.md  SPEC.md  docker-compose.yml  git_readiness_checker.sh  manual_test.py  pyproject.toml  requirements.txt  run.sh  script.sh
.windsurf/rules/: how-to-work-in-project.md  lifeguard.yaml
.windsurf/workflows/: create-pull-request.md
examples/: README.md  colors_response.json  github_brand.json  logo_response.json  search_results.json
scripts/: clean-for-github.md  clean-for-github.sh
src/brandfetch_mcp/: __init__.py  brand_logo.py  brandfetch_logo_lookup_checked.py  client.py  server.py
tests/: _test_brand_logo.py  test_brand_logo.py  test_brandfetch_logo_lookup_checked.py  test_client.py  test_server.py
